--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
+  "name": "homework-master",
+  "version": "0.0.3",
+  "description": "A app that creates chat rooms on discord for schools",
   "engines": {
     "node": "8.9.1"
   },
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "node app.js",
+    "test": "node app.js"
   },
   "dependencies": {
     "bcrypt": "3.0.0",
     "body-parser": "^1.18.3",
+    "colors": "^1.3.2",
     "discord.js": "11.4.2",
     "ejs": "2.6.1",
     "express": "4.16.3",
@@ -27,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tristanbeedell/homework-master.git"
+    "url": "https://github.com/tristanbeedell/hm-refactoring.git"
   },
   "keywords": [
     "node",
