joining and logging in is more robust

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
 # Node build artifacts
 node_modules
-npm-debug.log
 
 # Local development
 *.env
-*.dev
 .DS_Store
 _test.js
 
-# Docker
-Dockerfile
-docker-compose.yml
+access.log
