--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "body-parser": "^1.18.3",
     "colors": "^1.3.2",
     "discord.js": "11.4.2",
+    "dotenv": "^6.1.0",
     "ejs": "2.6.1",
     "express": "4.16.3",
     "express-session": "1.15.6",
     "heroku-ssl-redirect": "0.0.4",
+    "morgan": "^1.9.1",
     "pg": "^7.5.0",
     "url": "^0.11.0"
   },
