--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "node _test.js"
+    "test": "node inspect _test.js"
   },
   "dependencies": {
     "bcrypt": "3.0.0",
