--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "2.6.1",
     "express": "4.16.3",
     "express-session": "1.15.6",
+    "markdown": "^0.5.0",
     "morgan": "^1.9.1",
     "pg": "^7.5.0",
     "url": "^0.11.0"
@@ -33,7 +34,7 @@
   },
   "keywords": [
     "node",
-		"discord",
+    "discord",
     "express"
   ]
 }
