--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
   "dependencies": {
     "bcrypt": "3.0.0",
     "body-parser": "^1.18.3",
-    "colors": "^1.3.2",
+    "colors": "^1.3.3",
     "discord.js": "11.4.2",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "ejs": "2.6.1",
     "express": "4.16.3",
     "express-session": "1.15.6",
+    "helmet": "^3.15.0",
     "markdown": "^0.5.0",
     "morgan": "^1.9.1",
-    "pg": "^7.5.0",
+    "pg": "^7.8.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
-    "tape": "^4.7.0"
+    "tape": "^4.9.2"
   },
   "repository": {
     "type": "git",
