--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -170,7 +170,7 @@
         "no-negated-condition": "off",
         "no-negated-in-lhs": "error",
         "no-nested-ternary": "off",
-        "no-new": "off",
+        "no-new": "error",
         "no-new-func": "error",
         "no-new-object": "error",
         "no-new-require": "error",
