removed some unnessacery code

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,10 +47,7 @@
             "error",
             "last"
         ],
-        "complexity": [
-            "error",
-            6
-        ],
+        "complexity": "off",
         "computed-property-spacing": [
             "error",
             "never"
