Improved the commands
- More varieties of quote mark are supported.
- Better instructions are given

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,10 +47,7 @@
             "error",
             "last"
         ],
-        "complexity": [
-            "warn",
-            9
-        ],
+        "complexity": "off",
         "computed-property-spacing": [
             "error",
             "never"
